# cociplan

./: .env.ci.sample  .gitignore  Dockerfile  README.md  docker-compose.yml  docker.client.Dockerfile  pyproject.toml
.github/: CONTRIBUTING.md
.github/workflows/: deploy.yml  django.yml  docker-build-publish-backend-latest.yml  docker-build-publish-latest.yml  docker-build-publish-tag.yml  react.yml
backend/: manage.py
backend/cociplan/: asgi.py  settings.py  urls.py  wsgi.py
backend/config/: config.sample.py
backend/initialize_data/: urls.py  views.py
backend/initialize_data/data/: ingredients.json  products.json  recipes.json  sides.json
backend/initialize_data/initializers/: products.py  recipes.py
backend/menus/: urls.py  views.py
backend/menus/migrations/: 0001_initial.py  0002_recipe_is_oven_recipe_recipe_type.py  0003_alter_recipe_type.py  0004_recipe_is_side_plate_recipe_side_plates.py  0005_rename_side_plates_recipe_sides_delete_side.py  0006_remove_recipe_image_alter_recipe_sides_recipeimage.py  0007_alter_recipeimage_options_remove_recipeimage_id_and_more.py  0008_remove_recipe_description_alter_recipeimage_recipe.py  0009_remove_recipe_can_be_dinner_and_more.py  0010_alter_dailymenu_dinner_recipe_and_more.py
backend/menus/models/: __init__.py  daily_menus.py  ingredients.py  products.py  recipes.py  sides.py  weekly_menus.py
backend/menus/serializers/: daily_menus.py  ingredients.py  products.py  recipes.py  sides.py  weekly_menus.py
backend/menus/utils/: weekly_menu_generator.py  weekly_menu_generator_gpt.py
client/: .eslintrc.js  index.html  package-lock.json  package.json
client/public/: manifest.json
client/src/: App.test.tsx  App.tsx  Layout.tsx  MainRouter.tsx  config.ts  i18n.ts  index.tsx  make_version.ts  routes.ts  version.js  version.ts
client/src/api/: api-client.ts  (+1 more)
(+75 files in other folders)
